--- a/cover.html
+++ b/cover.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">    
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="quick fixer.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quick Fixers - Welcome</title>
+  <link rel="stylesheet" href="cov.css">
 </head>
 <body>
-
-    <nav class="navbar">
-        <div class="logo">
-            <i class="fas fa-star"></i>
-<span>qiuck fixers</span>
-        </div>
-        <div class="nav-links">
-            <a href="cover.html">cover</a> 
-            <a href="signup.html">signup</a>
-            <a href="home.html">home</a>
-            <a href="#">Categories</a>
-            <a href="#">Report</a>
-            <a href="#">Contact</a>
-        </div>
-    </nav>
-
-    <section id="cover-page" class="page-section active">
-        <div class="cover-content">
-            <h1 class="cover-title">Welcome to Quick FIxers</h1>
-            <p class="cover-text">This is where You Can Find a trusted partner for professional and reliable services.
-                We are dedicated to delivering high-quality solutions that meet your needs and your satisfication level.
-                We ensure every task is Completed with precision and care.</p>
-            </p>
-            <button class="signup-button" > <a href="signup.html"></a> Sign Up Now</button>
-        </div>
-    </section>
-    
+  <div class="cover-container">
+    <h1>👷 Quick Fixers</h1>
+    <p>Your trusted repair service platform</p>
+    <button>
+    <span class="shadow"></span>
+    <span class="edge"></span>
+    <span class="front text"> <a href="#">Enter the Website</a>
+    </span>
+  </div>
 </body>
 </html>
