--- a/hire now.html
+++ b/hire now.html
@@ -55,8 +55,8 @@
     button {
       width: 100%;
       padding: 12px;
-      background-color: #00cc99;
-      color: white;
+      background-color: white;
+      color: red;
       border: none;
       border-radius: 5px;
       font-size: 1rem;
@@ -64,7 +64,10 @@
     }
 
     button:hover {
-      background-color: #009977;
+      background-color: #00cc99;
+      color: white;
+
+      
     }
 
     .footer {
@@ -73,7 +76,6 @@
       font-size: 0.9rem;
     }
 
-    
     @media (max-width: 768px) {
       .form-container {
         width: 90%;
