--- a/contact us.html
+++ b/contact us.html
@@ -3,21 +3,333 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Us - Quick Fixers</title>
-  <link rel="stylesheet" href="contac ust.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+body {
+  background: #0a1a3a; /* Dark blue */
+  line-height: 1.6;
+  color: #f0e6d2; /* Cream */
+}
+/* ===== UNIVERSAL NAVIGATION BAR ===== */
+nav {
+    background: rgba(10, 26, 58, 0.98); /* Semi-transparent dark blue */
+    padding: 0.75rem 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(212, 175, 55, 0.3); /* Gold border */
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(10px); /* Frosted glass effect */
+    -webkit-backdrop-filter: blur(10px); /* Safari support */
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 1.5rem;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 1200px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+nav a {
+    color: #d4af37; /* Gold */
+    text-decoration: none;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    font-size: 1.05rem;
+    padding: 0.5rem 1.25rem;
+    border-radius: 6px;
+    letter-spacing: 0.5px;
+}
+
+nav a:hover {
+    color: #f0e6d2; /* Cream */
+    background: rgba(212, 175, 55, 0.15); /* Light gold overlay */
+    transform: translateY(-2px);
+}
+
+/* Active link style */
+nav a.active {
+    background: rgba(212, 175, 55, 0.25);
+    color: #f0e6d2;
+}
+
+/* ===== MOBILE RESPONSIVENESS ===== */
+@media (max-width: 992px) {
+    nav ul {
+        gap: 1rem;
+    }
+    nav a {
+        padding: 0.5rem 1rem;
+        font-size: 0.95rem;
+    }
+}
+
+@media (max-width: 768px) {
+    nav {
+        padding: 0.75rem 1.5rem;
+    }
+    nav ul {
+        gap: 0.75rem;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    nav a {
+        padding: 0.4rem 0.8rem;
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 480px) {
+    nav {
+        padding: 0.6rem 1rem;
+    }
+    nav ul {
+        gap: 0.5rem;
+    }
+    nav a {
+        padding: 0.35rem 0.6rem;
+        font-size: 0.85rem;
+    }
+}
+/* naav */
+
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
+}
+
+/* Navigation */
+nav {
+  background: rgba(10, 26, 58, 0.9);
+  padding: 1rem;
+  position: fixed;
+  top: 1rem;
+  left: 50%;
+  transform: translate(-50%);
+  border-radius: 30px;
+  border: 1px solid #d4af37;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  backdrop-filter: blur(5px);
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+nav a {
+  color: #d4af37;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+nav a:hover {
+  color: #f0e6d2;
+}
+
+/* Hero Section */
+.contact-hero {
+  background: linear-gradient(135deg, #0a1a3a, #1a2b50);
+  color: #f0e6d2;
+  text-align: center;
+  padding: 120px 20px 80px;
+  animation: fadeIn 1s ease-in-out;
+}
+
+.contact-hero h2 {
+  font-size: 2.8rem;
+  margin-bottom: 15px;
+  color: #d4af37;
+}
+
+.contact-hero p {
+  font-size: 1.2rem;
+  opacity: 0.9;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+/* Contact Content */
+.contact-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 60px 5%;
+  gap: 30px;
+}
+
+.contact-form, 
+.contact-info {
+  flex: 1 1 400px;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  transition: transform 0.3s;
+  border: 1px solid rgba(212, 175, 55, 0.3);
+  backdrop-filter: blur(8px);
+}
+
+.contact-form:hover,
+.contact-info:hover {
+  transform: translateY(-5px);
+}
+
+.contact-form h3,
+.contact-info h3 {
+  color: #d4af37;
+  margin-bottom: 25px;
+  font-size: 1.5rem;
+}
+
+/* Form Elements */
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 16px;
+  margin-bottom: 20px;
+  border: 2px solid rgba(212, 175, 55, 0.3);
+  border-radius: 8px;
+  font-size: 1rem;
+  background: rgba(255, 255, 255, 0.05);
+  color: #f0e6d2;
+  transition: all 0.3s;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  border-color: #d4af37;
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(212, 175, 55, 0.2);
+}
+
+.contact-form textarea {
+  resize: vertical;
+  min-height: 150px;
+}
+
+.contact-form button {
+  background: linear-gradient(to right, #d4af37, #c9a227);
+  color: #0a1a3a;
+  border: none;
+  padding: 16px 30px;
+  font-size: 1.1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s;
+  font-weight: bold;
+  width: 100%;
+}
+
+.contact-form button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(212, 175, 55, 0.3);
+}
+
+/* Contact Info */
+.contact-info p {
+  font-size: 1.1rem;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Footer */
+footer {
+  background: rgba(0, 0, 0, 0.3);
+  color: rgba(240, 230, 210, 0.7);
+  text-align: center;
+  padding: 20px;
+  margin-top: 30px;
+  font-size: 0.9rem;
+  border-top: 1px solid rgba(212, 175, 55, 0.2);
+}
+
+/* Animations */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-20px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .contact-container {
+    flex-direction: column;
+    padding: 40px 5%;
+  }
   
+  .contact-hero {
+    padding: 100px 20px 60px;
+  }
+  
+  .contact-hero h2 {
+    font-size: 2.2rem;
+  }
+  
+  nav ul {
+    gap: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .contact-hero h2 {
+    font-size: 1.8rem;
+  }
+  
+  .contact-hero p {
+    font-size: 1rem;
+  }
+  
+  .contact-form,
+  .contact-info {
+    padding: 25px;
+  }
+  
+  nav {
+    width: 90%;
+  }
+  
+  nav ul {
+    gap: 10px;
+  }
+}
+</style>
 </head>
 <body>
 
   <header>
     <div class="container">
-      <h1>Quick Fixers</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
-        </ul>
-      </nav>
+      
+     <nav>
+    <ul>
+        <li><a href="index.html">Cover</a></li>
+        <li><a href="home.html" class="">Home</a></li>
+        <li><a href="categories.html">Categories</a></li>
+        <li><a href="contact us.html" class="active">Contact</a></li>
+        <li><a href="report.html">Report</a></li>
+    </ul>
+</nav>
     </div>
   </header>
 
@@ -36,18 +348,5 @@
         <button type="submit">📨 Send Message</button>
       </form>
     </div>
-
-    <div class="contact-info">
-      <h3>📞 Contact Info</h3>
-      <p><strong>📍 Address:</strong> Maka Al Mukarama Street, Mogadishu</p>
-      <p><strong>📱 Phone:</strong> +252 61 7754171</p>
-      <p><strong>📨 Email:</strong> support@quickfixers.com</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Quick Fixers. All rights reserved.</p>
-  </footer>
-
 </body>
 </html>
