--- a/hire now.html
+++ b/hire now.html
@@ -13,9 +13,9 @@
     }
 
     body {
-      background: #0a1a3a; /* Dark blue */
+      background: #0a1a3a; 
       padding: 40px 20px;
-      color: #f0e6d2; /* Cream */
+      color: #f0e6d2; 
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -26,7 +26,7 @@
       text-align: center;
       margin-bottom: 40px;
       font-size: 2.5rem;
-      color: #d4af37; /* Gold */
+      color: #d4af37; 
       position: relative;
       padding-bottom: 15px;
     }
@@ -111,18 +111,9 @@
       font-size: 0.9rem;
     }
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
 
-    /* Responsive Design */
+
+    
     @media (max-width: 768px) {
       h1 {
         font-size: 2rem;
@@ -185,7 +176,7 @@
       <label for="message">Additional Notes (Optional)</label>
       <textarea id="message" name="message" rows="4"></textarea>
 
-      <button type="submit"><a href="thanks.html">Send Booking Request</a></button>
+      <button type="submit" ><a href="thanks.html" style="text-decoration: none;">Send Booking Request</a></button>
     </form>
   </div>
 
