--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
       margin: 0;
       padding-top: 70px;
       font-family: 'Segoe UI', sans-serif;
-      background: #0a1a3a; /* Dark blue */
+      background: #0a1a3a; 
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #f0e6d2; /* Cream/gold text */
+      color: #f0e6d2; 
       text-align: center;
     }
-/* ===== UNIVERSAL NAVIGATION BAR ===== */
+/*N*/
 nav {
-    background: rgba(10, 26, 58, 0.98); /* Semi-transparent dark blue */
+    background: rgba(10, 26, 58, 0.98); 
     padding: 0.75rem 2rem;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    border-bottom: 1px solid rgba(212, 175, 55, 0.3); /* Gold border */
+    border-bottom: 1px solid rgba(212, 175, 55, 0.3); 
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     display: flex;
     justify-content: center;
-    backdrop-filter: blur(10px); /* Frosted glass effect */
-    -webkit-backdrop-filter: blur(10px); /* Safari support */
+    backdrop-filter: blur(10px); 
+
 }
 
 nav ul {
@@ -48,9 +48,8 @@ nav ul {
 }
 
 nav a {
-    color: #d4af37; /* Gold */
+    color: #d4af37; 
     text-decoration: none;
-    font-weight: 600;
     transition: all 0.3s ease;
     font-size: 1.05rem;
     padding: 0.5rem 1.25rem;
@@ -59,18 +58,18 @@ nav a {
 }
 
 nav a:hover {
-    color: #f0e6d2; /* Cream */
-    background: rgba(212, 175, 55, 0.15); /* Light gold overlay */
+    color: #f0e6d2; 
+    background: rgba(212, 175, 55, 0.15);
     transform: translateY(-2px);
 }
 
-/* Active link style */
+
 nav a.active {
     background: rgba(212, 175, 55, 0.25);
     color: #f0e6d2;
 }
 
-/* ===== MOBILE RESPONSIVENESS ===== */
+
 @media (max-width: 992px) {
     nav ul {
         gap: 1rem;
@@ -118,7 +117,7 @@ nav a.active {
     .cover-container h1 {
       font-size: 3.5rem;
       margin-bottom: 20px;
-      color: #d4af37; /* Gold */
+      color: #d4af37; 
     }
 
     .cover-container p {
@@ -128,14 +127,14 @@ nav a.active {
     }
 
     nav {
-      background: rgba(10, 26, 58, 0.8); /* Semi-transparent dark blue */
+      background: rgba(10, 26, 58, 0.8);
       padding: 1rem;
       position: fixed;
       top: 1rem;
       left: 50%;
       transform: translate(-50%);
       border-radius: 30px;
-      border: 1px solid #d4af37; /* Gold border */
+      border: 1px solid #d4af37;
       box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5);
       z-index: 1000;
     }
@@ -151,7 +150,7 @@ nav a.active {
 
     a {
       text-decoration: none;
-      color: #d4af37; /* Gold */
+      color: #d4af37; 
       position: relative;
       padding: 5px;
       transition: color 0.3s ease;
@@ -159,12 +158,12 @@ nav a.active {
     }
 
     a:hover {
-      color: #f0e6d2; /* Lighter cream on hover */
+      color: #f0e6d2; 
     }
 
     button {
-      background: #a09675; /* Gold */
-      color: #0a1a3a; /* Dark blue */
+      background: #a09675; 
+      color: #0a1a3a; 
       border: none;
       padding: 15px 30px;
       font-size: 1.1rem;
@@ -175,7 +174,7 @@ nav a.active {
     }
 
     button:hover {
-      background: #f0e6d2; /* Cream */
+      background: #f0e6d2; 
       transform: translateY(-3px);
       box-shadow: 0 5px 15px rgba(212, 175, 55, 0.4);
     }
@@ -191,7 +190,7 @@ nav a.active {
       }
     }
 
-    /* Mobile responsiveness */
+
     @media (max-width: 768px) {
       nav {
         width: 90%;
@@ -225,7 +224,7 @@ nav a.active {
     <button>
     <span class="shadow"></span>
     <span class="edge"></span>
-    <span class="front text"> <a href="#">Enter the Website</a>
+    <span class="front text"> <a href="home.html">Enter the Website</a>
     </span>
   </div>
 </body>
