--- a/report.html
+++ b/report.html
@@ -14,29 +14,29 @@
 body {
     position: relative;
     font-family: 'Segoe UI', sans-serif;
-    background: #0a1a3a; /* Dark blue */
+    background: #0a1a3a; 
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 30px;
-    color: #f0e6d2; /* Cream */
+    color: #f0e6d2;
 }
-/* ===== UNIVERSAL NAVIGATION BAR ===== */
+
 nav {
-    background: rgba(10, 26, 58, 0.98); /* Semi-transparent dark blue */
+    background: rgba(10, 26, 58, 0.98); 
     padding: 0.75rem 2rem;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    border-bottom: 1px solid rgba(212, 175, 55, 0.3); /* Gold border */
+    border-bottom: 1px solid rgba(212, 175, 55, 0.3);
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     display: flex;
     justify-content: center;
-    backdrop-filter: blur(10px); /* Frosted glass effect */
-    -webkit-backdrop-filter: blur(10px); /* Safari support */
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
 }
 
 nav ul {
@@ -52,7 +52,7 @@ nav ul {
 }
 
 nav a {
-    color: #d4af37; /* Gold */
+    color: #d4af37; 
     text-decoration: none;
     font-weight: 600;
     transition: all 0.3s ease;
@@ -63,18 +63,17 @@ nav a {
 }
 
 nav a:hover {
-    color: #f0e6d2; /* Cream */
-    background: rgba(212, 175, 55, 0.15); /* Light gold overlay */
+    color: #f0e6d2;
+    background: rgba(212, 175, 55, 0.15); 
     transform: translateY(-2px);
 }
 
-/* Active link style */
 nav a.active {
     background: rgba(212, 175, 55, 0.25);
     color: #f0e6d2;
 }
 
-/* ===== MOBILE RESPONSIVENESS ===== */
+
 @media (max-width: 992px) {
     nav ul {
         gap: 1rem;
@@ -129,7 +128,7 @@ nav a.active {
 .report-form h2 {
     text-align: center;
     margin-bottom: 30px;
-    color: #d4af37; /* Gold */
+    color: #d4af37; 
     font-size: 1.8rem;
 }
 
@@ -194,18 +193,8 @@ nav a.active {
     box-shadow: 0 8px 20px rgba(212, 175, 55, 0.3);
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
 
-/* Responsive Design */
+
 @media (max-width: 768px) {
     .report-form {
         padding: 30px;
