--- a/contact us.html
+++ b/contact us.html
@@ -13,25 +13,25 @@
 }
 
 body {
-  background: #0a1a3a; /* Dark blue */
+  background: #0a1a3a; 
   line-height: 1.6;
-  color: #f0e6d2; /* Cream */
+  color: #f0e6d2; 
 }
-/* ===== UNIVERSAL NAVIGATION BAR ===== */
+
 nav {
-    background: rgba(10, 26, 58, 0.98); /* Semi-transparent dark blue */
+    background: rgba(10, 26, 58, 0.98); 
     padding: 0.75rem 2rem;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    border-bottom: 1px solid rgba(212, 175, 55, 0.3); /* Gold border */
+    border-bottom: 1px solid rgba(212, 175, 55, 0.3); 
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     display: flex;
     justify-content: center;
-    backdrop-filter: blur(10px); /* Frosted glass effect */
-    -webkit-backdrop-filter: blur(10px); /* Safari support */
+    backdrop-filter: blur(10px); 
+
 }
 
 nav ul {
@@ -47,7 +47,7 @@ nav ul {
 }
 
 nav a {
-    color: #d4af37; /* Gold */
+    color: #d4af37;
     text-decoration: none;
     font-weight: 600;
     transition: all 0.3s ease;
@@ -58,18 +58,17 @@ nav a {
 }
 
 nav a:hover {
-    color: #f0e6d2; /* Cream */
-    background: rgba(212, 175, 55, 0.15); /* Light gold overlay */
+    color: #f0e6d2; 
+    background: rgba(212, 175, 55, 0.15); 
     transform: translateY(-2px);
 }
 
-/* Active link style */
+
 nav a.active {
     background: rgba(212, 175, 55, 0.25);
     color: #f0e6d2;
 }
 
-/* ===== MOBILE RESPONSIVENESS ===== */
 @media (max-width: 992px) {
     nav ul {
         gap: 1rem;
@@ -107,15 +106,7 @@ nav a.active {
         font-size: 0.85rem;
     }
 }
-/* naav */
 
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-}
-
-/* Navigation */
 nav {
   background: rgba(10, 26, 58, 0.9);
   padding: 1rem;
@@ -147,7 +138,6 @@ nav a:hover {
   color: #f0e6d2;
 }
 
-/* Hero Section */
 .contact-hero {
   background: linear-gradient(135deg, #0a1a3a, #1a2b50);
   color: #f0e6d2;
@@ -169,7 +159,6 @@ nav a:hover {
   margin: 0 auto;
 }
 
-/* Contact Content */
 .contact-container {
   display: flex;
   flex-wrap: wrap;
@@ -202,7 +191,6 @@ nav a:hover {
   font-size: 1.5rem;
 }
 
-/* Form Elements */
 .contact-form input,
 .contact-form textarea {
   width: 100%;
@@ -245,8 +233,6 @@ nav a:hover {
   transform: translateY(-3px);
   box-shadow: 0 8px 20px rgba(212, 175, 55, 0.3);
 }
-
-/* Contact Info */
 .contact-info p {
   font-size: 1.1rem;
   margin-bottom: 20px;
@@ -255,7 +241,7 @@ nav a:hover {
   gap: 10px;
 }
 
-/* Footer */
+
 footer {
   background: rgba(0, 0, 0, 0.3);
   color: rgba(240, 230, 210, 0.7);
@@ -266,13 +252,7 @@ footer {
   border-top: 1px solid rgba(212, 175, 55, 0.2);
 }
 
-/* Animations */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-20px); }
-  to   { opacity: 1; transform: translateY(0); }
-}
 
-/* Responsive Design */
 @media (max-width: 768px) {
   .contact-container {
     flex-direction: column;
@@ -307,7 +287,7 @@ footer {
   }
   
   nav {
-    width: 90%;
+    width: 80%;
   }
   
   nav ul {
